create data transfer object and connect in postgresql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,26 @@
+#Database
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
 
+# Application port running
+server.port=8083
+
+#Connection URL
+spring.datasource.url=jdbc:postgresql://localhost:5434/market
+
+#Database user
+spring.datasource.username=postgres
+
+#Database password
+spring.datasource.password=sued
+
+#Connection driver name
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#Setting to constantly generates updates with hibernate
+spring.jpa.hibernate.ddl-auto=update
+
+#Format SQL output
+spring.jpa.properties.hibernate.format_sql=true
