deploy on railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,19 @@
 #Database
-spring.jpa.database=POSTGRESQL
+spring.jpa.database=postgresql
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
 # Application port running
-server.port=8083
+server.port=7270
 
 #Connection URL
-spring.datasource.url=jdbc:postgresql://localhost:5434/market
-
+spring.datasource.url=jdbc:postgresql:sMs4AwRh9Wt7bYrxVRCs@containers-us-west-140.railway.app:7270/railway
 #Database user
 spring.datasource.username=postgres
 
 #Database password
-spring.datasource.password=sued
+spring.datasource.password=sMs4AwRh9Wt7bYrxVRCs
 
 #Connection driver name
 spring.datasource.driver-class-name=org.postgresql.Driver
